src/objects/Project__c.object
<CustomObject>
    <description>This object is used to store all information about the projects within the organisation.</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>This field is used to hold some additional information related to project</description>
        <label>Additional Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>This field is defined to track the due date of completion of project</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>This field is used to enter project specific Hourly Rate for a Employee</description>
        <inlineHelpText>Project specific &quot;Hourly Rate&quot;</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>This field is used to enter the scope/goal for the project</description>
        <label>Scope</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field is defined to track the starting date for the project</description>
        <inlineHelpText>Starting date for a  project</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to track the status of the project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StatusCannotBeBlank</fullName>
        <active>true</active>
        <description>This validation performs blank check for status field for project</description>
        <errorConditionFormula>ISBLANK( TEXT(Status__c ) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please select a status</errorMessage>
    </validationRules>
</CustomObject>